@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: "Start Scan" menu-entry gets disabled while scanning. (BR 81619).
   FIX: Directories with non-ascii chars don't get scanned (CB) in multibyte locales.
   CHG: Enhanced "Fill-Down" feature for track column (auto-increment) (BR 81194).
   FIX: Closing xmms-visualizations freezes amaroK (BR 81326).
